--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,9 +10,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
-      #with:
-        #args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
-      env:
+      with:      
         aws-region: us-east-1 # Use your bucket region here
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
