--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: CI
 on: 
   push:
     branches:
-      - master #here we choose to deploy only when a push is detected on the main branch
+      - main #here we choose to deploy only when a push is detected on the main branch
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,10 +10,15 @@ jobs:
     - uses: actions/checkout@v1
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
-      with:      
-        aws-region: us-east-1 # Use your bucket region here
-      env:
-        aws_s3_bucket: ${{ secrets.AWS_S3_BUCKET }}
+      with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              
+        aws-region: us-east-1 # Use your bucket region here
+        
+    # Here you could add some building steps if you were dealing with some angular/react/Vue...
+    # - name: Build static site
+    #  run: yarn install && npm run-script build
+    
+    - name: Deploy static site to S3 bucket
+      run: aws s3 sync  s3://wordpress1 /wordpress_s3/wordpress1/  --delete
+      # --delete flag will remove any file in the s3 that are not on the "thefoldertodeploy" folder
