--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1 # Use your bucket region here
+        aws-s3-bucket: ${{ secrets.AWS_S3_BUCKET }}
         
     # Here you could add some building steps if you were dealing with some angular/react/Vue...
     # - name: Build static site
