--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@master
       with:      
@@ -16,6 +17,4 @@ jobs:
         aws_s3_bucket: wordpress27980
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./wordpress1/ s3://wordpress27980 --delete
-              
+    
